# CastleJump-ByteBoi

./: CMakeLists.txt  CastleJump-ByteBoi.ino  CastleJump.ino  README
SD/: game.properties
SD/Music/: Game.aac  Menu.aac
data/: GameOver160x128.raw.hs  Highscore.raw.hs  Highscore160x128.raw.hs  HomeScreen160x128.raw.hs  Homescreen.raw.hs  Pod160x10.raw  PodLava160x10.g565.hs  PodLava160x10.raw.hs  heart.hpp.g565  lava.g565.hs
src/: CastleJump.cpp  CastleJump.h  EnterHighscoreState.cpp  EnterHighscoreState.h  EraseHighscoreState.cpp  EraseHighscoreState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  Menu.cpp  Menu.h  PauseState.cpp  PauseState.h  ShowHighscoreState.cpp  ShowHighscoreState.h  State.cpp  State.h
src/Highscore/: Highscore.cpp  Highscore.h
src/Melodies/: Melody.cpp  Melody.h  MelodyNotes.h  Note.h  Notes.hpp
src/bitmaps/: brick1.hpp  brick2.hpp  brick3.hpp  coin.hpp  downAnim.hpp  floor.hpp  game_over.hpp  game_over160x128.hpp  highscore.hpp  home_screen.hpp  lava.hpp  leftAnim.hpp  leftWall.hpp  platform1_1.hpp  platform1_2.hpp  platform1_3.hpp  platform1_4.hpp  platform2_1.hpp  platform2_2.hpp  platform2_3.hpp  platform2_4.hpp  platform3_1.hpp  platform3_2.hpp  platform3_3.hpp  platform3_4.hpp  player.hpp  power_up.hpp  red_screen.hpp  rightAnim.hpp  rightWall.hpp  window.hpp
src/bitmaps/heart/: heart1.hpp  srce_8x8.hpp
